[project]
name = "corellium-mcp"
version = "0.1.0"
description = "MCP server for Corellium"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.2.0",
]

[project.scripts]
corellium-mcp = "corellium_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corellium_mcp"]
